--- a/style.css
+++ b/style.css
@@ -1,69 +1,82 @@
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  // background-color:#262433;
+  background-color: #fff;
+}
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.container .preloader {
+  animation: rotate 2.3s cubic-bezier(0.75, 0, 0.5, 1) infinite;
+}
+@keyframes rotate {
+  50% {
+    transform: rotate(360deg);
   }
-  svg {
-    overflow: visible;
+  100% {
+    transform: rotate(720deg);
   }
-  svg path#line {
-    fill: none;
-    stroke: #e00000;
-    stroke-width: 2;
-    stroke-linecap: butt;
-    stroke-linejoin: round;
-    stroke-miterlimit: 4;
-    stroke-dasharray:none;
-    stroke-opacity: 1;
-    stroke-dasharray: 1;
-    stroke-dashoffset: 1;
-    animation: dash 4s linear infinite;
+}
+.preloader span {
+  position: absolute;
+  display: block;
+  height: 64px;
+  width: 64px;
+  background: #3fc1f2;
+  border: 1px solid #3fc1f2;
+  border-radius: 100%;
+}
+.preloader span:nth-child(1) {
+  transform: translate(-28px, -28px);
+  animation: shape_1 2.3s cubic-bezier(0.75, 0, 0.5, 1) infinite;
+}
+@keyframes shape_1 {
+  60% {
+    transform: scale(0.4);
   }
-  svg path#heart {
-    transform-origin: 50% 50%;
-    animation: blink 4s linear infinite;
+}
+.preloader span:nth-child(2) {
+  transform: translate(28px, -28px);
+  animation: shape_2 2.3s cubic-bezier(0.75, 0, 0.5, 1) infinite;
+}
+@keyframes shape_2 {
+  40% {
+    transform: scale(0.4);
   }
-  
-  @keyframes dash {
-    0% {
-      stroke-dashoffset: 1;
-    }
-    80% {
-      stroke-dashoffset: 0;
-    }
-    100% {
-      stroke-dashoffset: 0;
-    }
+}
+.preloader span:nth-child(3) {
+  position: relative;
+  border-radius: 0px;
+  transform: scale(0.98) rotate(-45deg);
+  animation: shape_3 2.3s cubic-bezier(0.75, 0, 0.5, 1) infinite;
+}
+@keyframes shape_3 {
+  50% {
+    border-radius: 100%;
+    transform: scale(0.5) rotate(-45deg);
   }
-  
-  @keyframes blink {
-    0% {
-      opacity: 0;
-      transform: scale(0);
-    }
-    60% {
-      opacity: 0;
-      transform: scale(0);
-    }
-    70% {
-      opacity: 1;
-      transform: scale(1.2);
-    }
-    75% {
-      opacity: 1;
-      transform: scale(1.0);
-    }
-    80% {
-      opacity: 1;
-      transform: scale(1.2);
-    }
-    85% {
-      opacity: 1;
-      transform: scale(1.0);
-    }
-    100% {
-      opacity: 0;
-      transform: scale(1.0);
-    }
+  100% {
+    transform: scale(0.98) rotate(-45deg);
   }
+}
+.shadow {
+  position: relative;
+  top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
+  height: 16px;
+  width: 64px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  border: 1px solid #d9d9d9;
+  animation: shadow 2.3s cubic-bezier(0.75, 0, 0.5, 1) infinite;
+}
+@keyframes shadow {
+  50% {
+    transform: translateX(-50%) scale(0.5);
+    border-color: #f2f2f2;
+  }
+}
