--- a/pic.css
+++ b/pic.css
@@ -1,59 +1,14 @@
-* {
-    /* Set fade in duration */
-    --fade-time: 0.5s;
+img {
+	width: 30%;
+	float: left;
+	margin: 1.66%;
 }
 
-body {
-    margin: 20px;
-    padding: 0;
-    background: #222;
-}
-
-.container {
-    max-width: 80%;
-    margin: auto;
-    /* border: lightblue solid 1px; */
-    /* background: #fff; */
-}
-
-.main-img img,
-.imgs img {
-    width: 100%;
-    border: #777 solid 2px;
-    border-radius: 4px;
-}
-
-.imgs {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 5px;
-}
-
-.imgs img {
-    cursor: pointer;
-    border-radius: 4px;
-    border: #888 solid 1px;
-}
-
-
-/* Fade in animation */
-
-@keyframes fadeIn {
-    to {
-        opacity: 1;
-    }
-}
-
-.fade-in {
-    opacity: 0;
-    animation: fadeIn var(--fade-time) ease-in 1 forwards;
-}
-
-
-/* Media Queries */
-
-@media (max-width: 700px) {
-    .imgs {
-        grid-template-columns: repeat(2, 1fr);
-    }
+p {
+	margin: 1.66%;
+	font-weight: 800;
+	font-size: 50px;
+	border-bottom: 2px solid #f1f1f1;
+	width: 30%;
+	padding-bottom: 10px;
 }
