--- a/main/picc.css
+++ b/main/picc.css
@@ -32,7 +32,13 @@ html {
 }
 
 body {
-  margin: 0;
+  background-size: cover;
+  background-position: center center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: #212121;
   background-image: url("https://www.yudiz.com/codepen/photography-banner/frame.png");
 }
